<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.talkable.demo.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/emailTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/emailTextDefault" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/orderNumberTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/emailTextLayout"
                android:hint="@string/orderNumberTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orderNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/orderNumberTextDefault" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/couponTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/orderNumberTextLayout"
                android:hint="@string/couponTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/couponText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/couponTextDefault" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subtotalTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/couponTextLayout"
                android:hint="@string/subtotalTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subtotalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/subtotalTextDefault" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventCategoryTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/subtotalTextLayout"
                android:hint="@string/eventCategoryTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventCategoryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eventCategoryTextDefault" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/webUUIDTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/eventCategoryTextLayout"
                android:hint="@string/webUUIDTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/webUUIDText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/offerIDTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/webUUIDTextLayout"
                android:hint="@string/offerIDTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/offerIDText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/eventBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/offerIDTextLayout"
                android:layout_marginTop="5pt"
                android:onClick="onEventClick"
                android:text="@string/eventBtnLabel" />

            <Button
                android:id="@+id/purchaseBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_below="@+id/eventBtn"
                android:layout_marginTop="5pt"
                android:onClick="onPurchaseClick"
                android:text="@string/purchaseBtnLabel" />

            <Button
                android:id="@+id/affiliateMemberViaApi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/purchaseBtn"
                android:layout_marginTop="5pt"
                android:onClick="onAffiliateMemberViaApiClick"
                android:text="@string/affiliateMemberViaApiBtnLabel" />

            <Button
                android:id="@+id/affiliateMemberBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/affiliateMemberViaApi"
                android:layout_marginTop="5pt"
                android:onClick="onAffiliateMemberClick"
                android:text="@string/affiliateBtnLabel" />

            <Button
                android:id="@+id/getRewardsBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5pt"
                android:onClick="getRewardsClick"
                android:text="@string/getRewardsBtnLabel"
                android:layout_below="@+id/affiliateMemberBtn" />

            <Button
                android:id="@+id/postPurchaseBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5pt"
                android:onClick="onPostPurchaseClick"
                android:text="@string/postPurchaseBtnLabel"
                android:layout_below="@+id/getRewardsBtn" />

            <Button
                android:id="@+id/deepLinkingBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5pt"
                android:onClick="onDeepLinkingClick"
                android:text="@string/deepLinkingBtnLabel"
                android:layout_below="@+id/postPurchaseBtn" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
